2014-05-30 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/javascript/jquery.pandora.controls.js,
	godmode/groups/group_list.php,
	godmode/massive/massive_add_alerts.php,
	godmode/massive/massive_add_action_alerts.php
	godmode/massive/massive_delete_action_alerts.php,
	godmode/massive/massive_delete_alerts.php,
	godmode/massive/massive_enable_disable_alerts.php,
	godmode/massive/massive_standby_alerts.php: Fixed bug that all
	agents would be shown in the target for masssive operations, if
	the user has an AW privilege for any agent (group).

2014-05-30  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php,
	godmode/setup/setup_visuals.php, include/functions_config.php,
	include/config_process.php, include/functions_ui.php,
	include/javascript/qrcode.js, include/javascript/pandora.js,
	operation/visual_console/public_console.php, images/qrcode_icon.jpg,
	general/header.php: added the feature to show the QR code of the
	pages for to make for example sticker for the fisical machines or
	other things.
	
	Incident: #818

2014-05-30  Sergio Martin <sergio.martin@artica.es>

	* general/news_dialog.php: Missed file in last commit

	* godmode/alerts/configure_alert_action.php
	godmode/alerts/configure_alert_command.php
	include/javascript/pandora_alerts.js: fixed preview
	of commands in action configuration and changed the 
	text input by a textarea in command configuration for
	ticket: #852

2014-05-30  Sergio Martin <sergio.martin@artica.es>

	* general/logon_ok.php
	godmode/setup/news.php
	include/functions.php
	pandoradb.sql
	pandoradb.postgreSQL.sql
	pandoradb.oracle.sql
	index.php
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql: Added modal window mode
	to the pandora news for ticket: #821

2014-05-29  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/graphs/pandora.d3.js, include/graphs/functions_d3.php,